--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -74,3 +74,16 @@ header #logo a:hover{
   color:black;
   transform: scale(1.50, 1.50);
 }
+
+/* Contenedor principal */
+#content{
+  min-height: 500px;
+  width: 75%;
+  margin: 0px auto;
+  box-shadow: 0px 0px 40px black;
+  border-left: 1px solid #b7b7b7;
+  border-right: 1px solid #b7b7b7;
+  background: rgba(255,255,255,0.7);
+  padding-top: 120px;
+
+}
