241 - Marcar los elementos de navegación del menú

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,15 @@
 <header>
   <ul>
     <li>
-      <a routerLink="['/sobre-mi']">
+      <a routerLink="['/sobre-mi']"
+      [routerLinkActive]="['actived']">
         Sobre Mi
       </a>
     </li>
 
     <li>
-      <a routerLink="['/proyectos']">
+      <a routerLink="['/proyectos']"
+      [routerLinkActive]="['actived']">
         Proyectos
       </a>
     </li>
@@ -19,13 +21,15 @@
     </li>
 
     <li>
-      <a routerLink="['/crear-proyecto']">
+      <a routerLink="['/crear-proyecto']"
+      [routerLinkActive]="['actived']">
         Crear Proyecto
       </a>
     </li>
 
     <li>
-      <a routerLink="['/contacto]">
+      <a routerLink="['/contacto]"
+      [routerLinkActive]="['actived']">
        contacto
       </a>
     </li>
