242 - Página sobre Mí

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,15 @@
-<p>about works!</p>
+<div id="title">
+  <h1>{{title}} </h1>
+  <h2>{{subtitle}} </h2>
+  <p>{{web}} </p>
+</div>
+
+<article class="about">
+  <h2>Sobre Mí</h2>
+  <p>
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem, error officiis itaque quae rem
+    asperiores sit saepe iusto odit beatae rerum at perspiciatis voluptatem magnam a consequatur, quod totam esse.
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus omnis odit quos cumque doloribus magnam quia molestiae.
+    Praesentium molestiae libero magni! Ad dicta dolor totam, aspernatur provident earum numquam culpa!
+  </p>
+</article>
