--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <header>
   <ul>
     <li>
-      <a routerLink="['/sobre-mi']"
+      <a routerLink="/sobre-mi"
       [routerLinkActive]="['actived']">
         Sobre Mi
       </a>
     </li>
 
     <li>
-      <a routerLink="['/proyectos']"
+      <a routerLink="/proyectos"
       [routerLinkActive]="['actived']">
         Proyectos
       </a>
@@ -21,14 +21,14 @@
     </li>
 
     <li>
-      <a routerLink="['/crear-proyecto']"
+      <a routerLink="/crear-proyecto"
       [routerLinkActive]="['actived']">
         Crear Proyecto
       </a>
     </li>
 
     <li>
-      <a routerLink="['/contacto]"
+      <a routerLink="/contacto"
       [routerLinkActive]="['actived']">
        contacto
       </a>
