--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -139,3 +139,49 @@ article.about{
   padding-bottom: 30px;
   text-align: justify
 }
+
+/* Sección de formulario */
+.container{
+  padding: 50px;
+  padding-top: 10px;
+}
+.container h2{
+  display: block;
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 10px;
+  margin-bottom: 15px
+}
+
+form{
+  width: 50%
+}
+form label{
+  display: block;
+  width: 100%;
+  margin-top: 10px
+
+}
+form input[type="text"],
+form input[type="number"],
+form input[type="email"],
+form textarea{
+  width: 80%;
+  padding: 5px;
+  margin-bottom: 5px;
+}
+form button,
+form input[type="submit"]{
+  font-size: 17px;
+  padding: 5px;
+  margin-top:15px;
+  color:white;
+  background: rgba(53,103,164);
+  border:1px solid rgba(13,67,133);
+  cursor: pointer;
+}
+form button:hover,
+form input[type="submit"]:hover{
+  background: rgba(53,103,164, 0.8);
+  border:1px solid rgba(13,67,133);
+  cursor: pointer;
+}
