--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -142,7 +142,7 @@ article.about{
 
 /* Sección de formulario */
 .container{
-  padding: 50px;
+  padding: 80px;
   padding-top: 10px;
 }
 .container h2{
@@ -153,7 +153,7 @@ article.about{
 }
 
 form{
-  width: 50%
+  width: 80%
 }
 form label{
   display: block;
@@ -165,7 +165,7 @@ form input[type="text"],
 form input[type="number"],
 form input[type="email"],
 form textarea{
-  width: 80%;
+  width: 35%;
   padding: 5px;
   margin-bottom: 5px;
 }
@@ -184,4 +184,18 @@ form input[type="submit"]:hover{
   background: rgba(53,103,164, 0.8);
   border:1px solid rgba(13,67,133);
   cursor: pointer;
+}
+
+.form_error{
+  color:white;
+  background-color: red;
+  padding: 3px;
+  margin-left: 5px;
+  font-size: 13px;
+  vertical-align: baseline;
+}
+
+form input[disabled]{
+  opacity: 0.4;
+  cursor: not-allowed;
 }
