--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,40 +1,42 @@
-
 /* Importar Fuentes */
-@font-face{
+@font-face {
   font-family: "yanone";
   src: url("fonts/yanone.ttf")
 }
-@font-face{
+
+@font-face {
   font-family: "finger";
-  src:url("fonts/finger.ttf")
+  src: url("fonts/finger.ttf")
 }
 
 /* Cargar estilos generales */
-*{
+* {
   margin: 0px;
   padding: 0px;
 }
 
-body{
- font-family: "yanone", Arial, Helvetica, sans-serif;
- font-size: 20px;
- background: url("../img/pattern.png");
- background-attachment: fixed;
+body {
+  font-family: "yanone", Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  background: url("../img/pattern.png");
+  background-attachment: fixed;
 }
 
-.clearfix{
+.clearfix {
   float: none;
   clear: both;
 
 }
-header{
+
+header {
   display: block;
   width: 100%;
   height: 90px;
-  background: rgba(53,103,164, 0.8);
+  background: rgba(53, 103, 164, 0.8);
   position: fixed;
   text-transform: uppercase;
 }
+
 header ul {
   display: block;
   height: inherit;
@@ -42,13 +44,15 @@ header ul {
   margin-top: -3px;
   text-align: center;
 }
+
 header ul li {
   display: inline-block;
   margin: 0px;
   text-align: center;
   line-height: 88px;
 }
-header a{
+
+header a {
   display: block;
   padding-right: 20px;
   padding-left: 20px;
@@ -57,39 +61,42 @@ header a{
   color: white;
   transition: all 300ms;
 }
+
 header a:hover,
-.actived{
-  background: rgba(0, 0,0, 0.8);
+.actived {
+  background: rgba(0, 0, 0, 0.8);
   cursor: pointer;
 }
-#logo{
+
+#logo {
   font-family: "finger";
   font-size: 30px;
 }
-#logo a{
+
+#logo a {
   transition: color 500ms, transform 500ms;
 }
 
-header #logo a:hover{
+header #logo a:hover {
   background: transparent;
-  color:black;
+  color: black;
   transform: scale(1.50, 1.50);
 }
 
 /* Contenedor principal */
-#content{
+#content {
   min-height: 500px;
   width: 75%;
   margin: 0px auto;
   box-shadow: 0px 0px 40px black;
   border-left: 1px solid #b7b7b7;
   border-right: 1px solid #b7b7b7;
-  background: rgba(255,255,255,0.7);
+  background: rgba(255, 255, 255, 0.7);
   padding-top: 120px;
 }
 
 /* Pie de pagina */
-footer{
+footer {
   width: 75%;
   margin: 0px auto;
   padding: 15px;
@@ -99,7 +106,7 @@ footer{
 
 
 /*Sobre Mí*/
-#title{
+#title {
   width: 70%;
   margin: 0px auto;
   text-align: center;
@@ -107,11 +114,11 @@ footer{
   margin-bottom: 50px;
 }
 
-#title h1{
-font-family: "finger";
-font-size: 60px;
-border-bottom: 1px solid #ccc;
-padding-bottom:5px;
+#title h1 {
+  font-family: "finger";
+  font-size: 60px;
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 5px;
 }
 
 #title h2 {
@@ -121,73 +128,77 @@ padding-bottom:5px;
   margin-bottom: 5px;
 }
 
-article.about{
+article.about {
   width: 70%;
   margin: 0px auto;
   margin-bottom: 20px;
   font-size: 23px;
 }
 
-.about h2{
+.about h2 {
   border-bottom: 1px solid #ccc;
   padding-bottom: 5px;
   margin-bottom: 5px;
 }
 
-.about p{
-  padding-top:20px;
+.about p {
+  padding-top: 20px;
   padding-bottom: 30px;
   text-align: justify
 }
 
 /* Sección de formulario */
-.container{
+.container {
   padding: 80px;
   padding-top: 10px;
 }
-.container h2{
+
+.container h2 {
   display: block;
   border-bottom: 1px solid #ccc;
   padding-bottom: 10px;
   margin-bottom: 15px
 }
 
-form{
+form {
   width: 80%
 }
-form label{
+
+form label {
   display: block;
   width: 100%;
   margin-top: 10px
-
 }
+
 form input[type="text"],
 form input[type="number"],
 form input[type="email"],
-form textarea{
+form textarea {
   width: 35%;
   padding: 5px;
   margin-bottom: 5px;
 }
+
 form button,
-form input[type="submit"]{
+form input[type="submit"] {
   font-size: 17px;
   padding: 5px;
-  margin-top:15px;
-  color:white;
-  background: rgba(53,103,164);
-  border:1px solid rgba(13,67,133);
-  cursor: pointer;
-}
-form button:hover,
-form input[type="submit"]:hover{
-  background: rgba(53,103,164, 0.8);
-  border:1px solid rgba(13,67,133);
+  margin-top: 15px;
+  color: white;
+  background: rgba(53, 103, 164);
+  border: 1px solid rgba(13, 67, 133);
   cursor: pointer;
 }
 
-.form_error{
-  color:white;
+form button:hover,
+form input[type="submit"]:hover {
+  background: rgba(53, 103, 164, 0.8);
+  border: 1px solid rgba(13, 67, 133);
+  cursor: pointer;
+}
+
+.form_error {
+  color: white;
   background-color: red;
   padding: 3px;
   margin-left: 5px;
@@ -195,7 +206,27 @@ form input[type="submit"]:hover{
   vertical-align: baseline;
 }
 
-form input[disabled]{
+form input[disabled] {
   opacity: 0.4;
   cursor: not-allowed;
+}
+
+.message {
+  width: 50%;
+  padding: 5px;
+  border: 1px solid #eee;
+}
+
+.success {
+  background: green;
+  color: white;
+}
+
+.success a{
+  color: white;
+}
+
+.failed {
+  background: red;
+  color: white;
 }
