248 - subir imagenes de los Proyectos

--- a/src/app/components/create/create.component.html
+++ b/src/app/components/create/create.component.html
@@ -94,7 +94,8 @@
       <input type="file"
              name="image"
              placeholder="Cargar imagen"
-             [(ngModel)]="image"/>
+             [(ngModel)]="image"
+             (change)="fileChangeEvent($event)"/>
 
     </p>
 <input type="submit"
