--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,8 +1,14 @@
 <div class="container">
   <h2>Proyectos</h2>
   <ul>
-    <li *ngFor="let item of projects">
-      <!-- <img src="{{url + }}"> -->
+    <li *ngFor="let item of projects"
+        class="project">
+        <div class="image">
+           <img src="{{url + '/get-image/' + item.image}}"
+                *ngIf="item.image">
+        </div>
+
+
       <h3>{{item.name}}</h3>
       <span>{{item.category}}</span>
     </li>
