--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -86,6 +86,7 @@ header #logo a:hover {
 /* Contenedor principal */
 #content {
   min-height: 500px;
+  height:unset ;
   width: 75%;
   margin: 0px auto;
   box-shadow: 0px 0px 40px black;
@@ -229,4 +230,32 @@ form input[disabled] {
 .failed {
   background: red;
   color: white;
+}
+
+
+/* Página de proyectos */
+.project{
+  list-style: none;
+  display: block;
+  float: left;
+  width: 25%;
+  text-align: center;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 30px;
+}
+
+.project .image{
+  width: 100%;
+  height: 150px;
+  overflow: hidden;
+}
+
+.project img{
+  width: 100%;
+
+
+
+
+
 }
