--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -3,14 +3,14 @@
   <ul>
     <li *ngFor="let item of projects"
         class="project">
-        <div class="image">
-           <img src="{{url + '/get-image/' + item.image}}"
-                *ngIf="item.image">
-        </div>
-
-
-      <h3>{{item.name}}</h3>
-      <span>{{item.category}}</span>
+        <a [routerLink]="[ '/proyecto', item._id ]">
+          <div class="image">
+            <img src="{{url + '/get-image/' + item.image}}"
+                  *ngIf="item.image">
+          </div>
+        <h3>{{item.name}}</h3>
+        <span>{{item.category}}</span>
+      </a>
     </li>
   </ul>
 
