--- a/src/app/components/detail/detail.component.html
+++ b/src/app/components/detail/detail.component.html
@@ -1,6 +1,8 @@
-<div class="container">
+<div class="container"
+     *ngIf="project">
 
-    <div class="image">
+    <div class="image"
+         *ngIf="project.image">
         <img src="{{url + '/get-image/' + project.image}}"
               *ngIf="project.image">
     </div>
@@ -19,7 +21,10 @@
         {{project.langs}}
       </p>
       <p>
-        <a href="#" class="button-edit">Editar</a>
+        <a class="button-edit"
+           [routerLink]="['/editar-proyecto', project._id ]">
+           Editar
+        </a>
         <a class="button-delete"
            (click)="deleteProject(project._id)">
            Eliminar
