--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -291,3 +291,9 @@ form input[disabled] {
   text-decoration: none;
   color: black;
 }
+
+.confirm{
+  display: block;
+  font-weight: bold;
+  margin-top: 10px;
+}
