260 - Propiedad Input de Padres a Hijos

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,1 +1,13 @@
-<p>contact works!</p>
+<div class="container">
+  <h1>Contacto!!</h1>
+  Tamaño del slaider:
+  <input type="number"
+         [(ngModel)]="widthSlider"/>
+  <button (click)="cargarSlider()">Cargar Slider</button>
+  <button (click)="resetearSlider()">Resetear Slider</button>
+<div *ngIf="anchuraToSlider">
+ <slider [anchura]="anchuraToSlider"
+         [etiquetas]="captions"></slider>
+</div>
+
+</div>
