--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -5,3 +5,5 @@
   <div><img src="/assets/img/coffee2.jpg" title="The long and winding road"></div>
   <div><img src="/assets/img/coffee3.jpg" title="Happy trees"></div>
 </div>
+
+<button (click)="lanzar($event)"> Conseguir autor</button>
