--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,6 +1,13 @@
 <div class="container">
   <h1>Contacto!!</h1>
-  Tamaño del slaider:
+
+  <div id="texto">
+    <p appResaltado>
+      Esta es la página de contacto, puedes enviarnos cualquier duda
+    </p>
+  </div>
+
+  <!-- Tamaño del slaider:
   <input type="number"
          [(ngModel)]="widthSlider"/>
   <button (click)="cargarSlider()">Cargar Slider</button>
@@ -10,6 +17,6 @@
          [etiquetas]="captions"
          (conseguirAutor)="getAutor($event)"></slider>
 </div>
-<span>{{autor.nombre + " " + autor.website}}</span>
+<span>{{autor.nombre + " " + autor.website}}</span> -->
 
 </div>
